--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Imonstant — Inovação Inteligente</title>
-    <link rel="icon" href="/src/assets/favicon.svg" type="image/svg+xml" />
+  <title>Imonstant — Inovação Inteligente</title>
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
   </head>
   <body class="h-full">
     <div id="root"></div>
